--- a/pertemuan3.html
+++ b/pertemuan3.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container {
+            margin-left: auto;
+            margin-right: auto;
+
+            max-width: 1400px;
+
+            padding-left: 20rem;
+            padding-right: 20rem;
+            box-sizing: border-box;
+            background: linear-gradient(to right, blue, cyan, gray);
+        }
+        .border{
+            border: 1px solid;
+        }
+        .border-black{
+            border-color: black;
+        }
+        .border-red{
+            border-color: red;
+        }
+        .border-blue{
+            border-color: blue;
+        }
+        .border-green{
+            border-color:green;
+        }
+        .rounded3 {
+            border-radius: 1rem;
+
+        }
+
+        .row::after{
+            content: "";
+            display: table;
+            clear: both;
+        }
+        .column{
+            float: left;
+            width: 50%;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="border border-black rounded-3">
+        Simple Forms
+    <form>
+        <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"/>
+        </div>
+    </label>
+    </form></div>
+        <div class="border border-red rounded-3">div 2</div>
+        <div class="border border-green rounded-3">div 3</div>
+        <div class="border border-blue rounded-3">div 4</div>
+        <p>
+            Ini adalah paragraf contoh untuk mendemonstrasikan pengaturan margin, padding, dan max-width pada sebuah container.
+        </p>
+    </div>
+    <script>
+        console.log(" JavaScript dari Internal Script");
+    </script>
 </body>
 </html>
